--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -50,7 +50,7 @@
                         Join our community of food lovers and explore a world of culinary delights. Find inspiration,
                         share your creations, and connect with fellow cooks.
                     </p>
-                    <form onsubmit="handleSearch(event)" class="max-w-2xl mx-auto" >
+                    <!-- <form onsubmit="handleSearch(event)" class="max-w-2xl mx-auto" >
                         <div class="relative">
                             <span
                                 class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-2xl text-neutral-500">search</span>
@@ -62,7 +62,7 @@
                                 Search
                             </button>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </section>
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-16">
