--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -36,9 +36,9 @@
                     <button class="flex items-center px-4 py-2 w-[80%] hover:bg-gray-900 rounded-lg"
                         onclick="showSection(this,'AllRecipe')">📦 My recipes</button>
                     <button class="flex items-center px-4 py-2 w-[80%] hover:bg-gray-900 rounded-lg"
-                        onclick="showSection(this,'myOrders')">📦Favorite</button>
+                        onclick="showSection(this,'Favorite')">📦Favorite</button>
 
-                    <a href="/users/logout" class="text-center">
+                    <a href="/logout" class="text-center">
                         <button
                             class="mt-4 flex text-center justify-center items-center px-4 py-2 w-[80%] bg-red-500 rounded-lg">
                             Logout ⏻
@@ -84,7 +84,8 @@
 
                         <!-- <p><strong>Date of Birth:</strong> Not Provided</p> -->
                     </div>
-                    <h1 onclick="addVideo()" class="cursor-pointer mt-6 text-lg font-semibold text-green-600 hover:text-green-800 transition-colors duration-200 bg-green-100 px-4 py-2 rounded-lg inline-block shadow-sm">
+                    <h1 onclick="addVideo()"
+                        class="cursor-pointer mt-6 text-lg font-semibold text-green-600 hover:text-green-800 transition-colors duration-200 bg-green-100 px-4 py-2 rounded-lg inline-block shadow-sm">
                         Add Recipe Video +
                     </h1>
                 </div>
@@ -154,6 +155,51 @@
                         <% }) %>
 
                 </div>
+                <div id="Favorite" class="content hidden grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+                    <% Favorite.forEach(function(product) { %>
+
+                        <div
+                            class="bg-white shadow-lg rounded-xl overflow-hidden border w-[45vw] sm:w-[30vw] md:w-[17vw] box-border md:h-[58vh]">
+                            <a href="/recipe/details/<%=product._id%>">
+
+                                <% if (product.images && product.images.length> 0) { %>
+                                    <img src="data:image/jpeg;base64,<%= product.images[0].toString('base64') %>"
+                                        class="w-full h-40 sm:h-60 rounded-lg object-cover object-center" />
+                                    <% } else { %>
+                                        <p>No images available for this product.</p>
+                                        <% } %>
+                                            <div class="md:p-4 p-2">
+                                                <h2 class=" capitalize font-bold text-lg text-nowrap">
+                                                    <%=product.title%>
+                                                </h2>
+                                                <p
+                                                    class="py-[1px] px-2 text-sm capitalize bg-zinc-100 rounded-xl inline-block">
+                                                    <%=product.category%>
+                                                </p>
+                                                <p class="text-sm text-gray-500">By Padmavati Jewels</p>
+                                                <div class="flex justify-around  flex-wrap items-center mt-3">
+
+                                                    <span class="text-purple-200 text-md line-through">₹
+                                                        <%=product.price%>
+                                                    </span>
+
+
+                                                </div>
+
+                                            </div>
+
+                            </a>
+                            <div class="w-full h-[5vh] md:h-[3vw] flex justify-around gap-4 my-4">
+                                <button onclick="removeFromFav(this,'<%= product._id %>')"
+                                    class=" bg-red-500 text-white py-2 px-4 rounded">UnFav
+                                </button>
+
+                            </div>
+                        </div>
+                        <% }) %>
+
+                </div>
+
 
 
 
@@ -161,11 +207,12 @@
         </div>
     </div>
     <form id="addRecipeForm"
-        class="hidden absolute top-[15vw] left-[30vw] bg-white shadow-lg rounded-lg p-6 w-96 space-y-4 border" action="/recipe/addVideo"
-        method="POST" enctype="multipart/form-data">
+        class="hidden absolute top-[15vw] left-[30vw] bg-white shadow-lg rounded-lg p-6 w-96 space-y-4 border"
+        action="/recipe/addVideo" method="POST" enctype="multipart/form-data">
         <div class="flex justify-between items-center">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">Add New Recipe</h2>
-            <p class="cursor-pointer text-gray-600 hover:text-red-500 text-xl font-bold bg-gray-200 rounded-full w-8 h-8 flex items-center justify-center transition-colors duration-200 shadow-sm" onclick="closeForm()">✕</p>
+            <p class="cursor-pointer text-gray-600 hover:text-red-500 text-xl font-bold bg-gray-200 rounded-full w-8 h-8 flex items-center justify-center transition-colors duration-200 shadow-sm"
+                onclick="closeForm()">✕</p>
         </div>
 
         <!-- Title -->
@@ -260,6 +307,21 @@
         function closeForm() {
             const form = document.getElementById('addRecipeForm');
             form.classList.add('hidden');
+        }
+
+        //remove from favorite
+
+        async function removeFromFav(element, Id) {
+            let res = await fetch('/user/addFav', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ Id })
+            })
+            console.log(element)
+            res = await res.json();
+            window.location.href = '/profile'
+
+
         }
 
 
