--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,6 +7,9 @@
     <link as="style"
         href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
         onload="this.rel='stylesheet'" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <style type="text/tailwindcss">
         :root {
@@ -31,16 +34,19 @@
                     </div>
                 </div>
                 <nav class="mt-6 px-4">
-                    <a class="flex items-center gap-3 px-4 py-3 text-gray-900 bg-indigo-50 rounded-lg" href="#">
+                    <a onclick="togggle(this,'Home')"
+                        class="flex items-center gap-3 px-4 py-3 text-gray-900 bg-indigo-50 rounded-lg" href="#">
                         <span class="material-symbols-outlined text-indigo-600">dashboard</span>
                         <span class="text-sm font-semibold text-indigo-600">Dashboard</span>
                     </a>
-                    <a class="flex items-center gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-lg transition-colors duration-200 mt-2"
+                    <a onclick="togggle(this,'Recipe')"
+                        class="flex items-center gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-lg transition-colors duration-200 mt-2"
                         href="#">
                         <span class="material-symbols-outlined">menu_book</span>
                         <span class="text-sm font-medium">Recipes</span>
                     </a>
-                    <a class="flex items-center gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-lg transition-colors duration-200 mt-2"
+                    <a onclick="togggle(this,'users')"
+                        class="flex items-center gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-lg transition-colors duration-200 mt-2"
                         href="#">
                         <span class="material-symbols-outlined">group</span>
                         <span class="text-sm font-medium">Users</span>
@@ -64,7 +70,7 @@
                     </a>
                 </div>
             </aside>
-            <main class="flex-1 bg-gray-50 hidden">
+            <main id="Home" class="content flex-1 bg-gray-50 ">
                 <header class="bg-white border-b border-gray-200 p-4 flex justify-between items-center">
                     <div class="lg:hidden">
                         <button class="text-gray-600">
@@ -122,7 +128,7 @@
 
 
 
-            <main class="flex-1 bg-gray-50 hidden">
+            <main id="Recipe" class="content flex-1 bg-gray-50 hidden">
                 <header class="bg-white border-b border-gray-200 p-4 flex justify-between items-center">
                     <div class="flex items-center gap-4">
                         <button @click="isSidebarOpen = !isSidebarOpen" class="text-gray-600 lg:hidden">
@@ -185,111 +191,54 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr class="bg-white border-b hover:bg-gray-50">
-                                    <td class="px-6 py-4 font-medium text-gray-900">#12345</td>
-                                    <td class="px-6 py-4">
-                                        <div class="flex items-center gap-3">
-                                            <img alt="Spaghetti Bolognese" class="w-10 h-10 rounded-md object-cover"
-                                                src="https://lh3.googleusercontent.com/aida-public/AB6AXuDQNUqyflvtrcKixxGUItC3ScMPhFuN2VY8hcoj8nzsvfY4RDKpPyc8thmqavgiL4SD0gmyORKp3yUKcguOpmMKzKYwRJS0EUMcnz4BYVhh3oD2ShKrdbi8etb2NixzRFxO8xGKVDHAAOB2AI4xxc1YT9RQR-zutMzD4UAY5oXhr9w83dZVPYBRIbfaOUjnp4_FZ5QZgNSHtvlOpuCKgpXPsGnSZPAWYBQm-h0wyTYkeuY6Yk06nan8L5wxsQtqF6Susgg_OPkYPDQ" />
-                                            <div class="flex flex-col">
-                                                <span class="font-semibold text-gray-800">Spaghetti
-                                                    Bolognese</span>
-                                                <button @click="isModalOpen = true"
-                                                    class="text-xs text-indigo-600 hover:underline text-left">View
-                                                    Details</button>
+                                <%recipe.forEach((rec)=>{%>
+                                    <tr class="bg-white border-b hover:bg-gray-50">
+                                        <td class="px-6 py-4 font-medium text-gray-900">#12345</td>
+                                        <td class="px-6 py-4">
+                                            <div class="flex items-center gap-3">
+                                                <img alt="Spaghetti Bolognese" class="w-10 h-10 rounded-md object-cover"
+                                                    src="data:image/jpeg;base64,<%= rec.images[0].toString('base64') %>" />
+                                                <div class="flex flex-col">
+                                                    <span class="font-semibold text-gray-800">
+                                                        <%=rec.title%>
+                                                    </span>
+                                                    <button
+                                                        class="text-xs text-indigo-600 hover:underline text-left">View
+                                                        Details</button>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="px-6 py-4">John Doe</td>
-                                    <td class="px-6 py-4">
-                                        <span
-                                            class="px-2 py-1 text-xs font-semibold text-green-800 bg-green-100 rounded-full">Approved</span>
-                                    </td>
-                                    <td class="px-6 py-4">
-                                        <div class="flex items-center justify-center gap-2">
-                                            <label class="switch">
-                                                <input checked="" type="checkbox" />
-                                                <span class="slider"></span>
-                                            </label>
-                                            <button
-                                                class="text-red-500 hover:text-red-700 p-2 rounded-md hover:bg-red-50 transition-colors duration-200">
-                                                <span class="material-symbols-outlined">delete</span>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr class="bg-white border-b hover:bg-gray-50">
-                                    <td class="px-6 py-4 font-medium text-gray-900">#67890</td>
-                                    <td class="px-6 py-4">
-                                        <div class="flex items-center gap-3">
-                                            <img alt="Pizza Margherita" class="w-10 h-10 rounded-md object-cover"
-                                                src="https://lh3.googleusercontent.com/aida-public/AB6AXuDoOd7pxyQBnYJYjdVz1D7ytpesXGkQ17CIvqhYC2vxOu_MuhEOXEDa91pZ-1XXXyQc6-kikoPF48N-cS_rgXvSHd7Y_aQpdXa3Fr808Gs4VppZEzy3qBgvT4HVVu95By-O2nuyWxGLkaMn9EpALDR0Jb3ZwLV32TpK6tVQYwUWXUB_8D-7pIfOEVshxgLObYpJoklxUXYK09rV8adBFFCOkk-8pDf7m15hnlK86tbBCnbsg1ikfO_RCJZFiHDIwjfCbg5mI1dcWeE" />
-                                            <div class="flex flex-col">
-                                                <span class="font-semibold text-gray-800">Pizza
-                                                    Margherita</span>
-                                                <button @click="isModalOpen = true"
-                                                    class="text-xs text-indigo-600 hover:underline text-left">View
-                                                    Details</button>
+                                        </td>
+                                        <td class="px-6 py-4">John Doe</td>
+                                        <td class="px-6 py-4">
+                                            <span
+                                                class="px-2 py-1 text-xs font-semibold text-green-800 bg-green-100 rounded-full">Approved</span>
+                                        </td>
+                                        <td class="px-6 py-4">
+                                            <div class="flex items-center justify-center gap-2">
+                                                <label class="switch">
+                                                    <input checked="" type="checkbox" />
+                                                    <span class="slider"></span>
+                                                </label>
+                                                <button
+                                                    class="text-red-500 hover:text-red-700 p-2 rounded-md hover:bg-red-50 transition-colors duration-200">
+                                                    <i class="fa-solid fa-xmark"></i>
+                                                </button>
+                                                <button
+                                                    class="text-red-500 hover:text-red-700 p-2 rounded-md hover:bg-red-50 transition-colors duration-200">
+                                                    <span class="material-symbols-outlined">delete</span>
+                                                </button>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="px-6 py-4">Jane Smith</td>
-                                    <td class="px-6 py-4">
-                                        <span
-                                            class="px-2 py-1 text-xs font-semibold text-yellow-800 bg-yellow-100 rounded-full">Pending</span>
-                                    </td>
-                                    <td class="px-6 py-4">
-                                        <div class="flex items-center justify-center gap-2">
-                                            <label class="switch">
-                                                <input type="checkbox" />
-                                                <span class="slider"></span>
-                                            </label>
-                                            <button
-                                                class="text-red-500 hover:text-red-700 p-2 rounded-md hover:bg-red-50 transition-colors duration-200">
-                                                <span class="material-symbols-outlined">delete</span>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr class="bg-white border-b hover:bg-gray-50">
-                                    <td class="px-6 py-4 font-medium text-gray-900">#11223</td>
-                                    <td class="px-6 py-4">
-                                        <div class="flex items-center gap-3">
-                                            <img alt="Pancakes" class="w-10 h-10 rounded-md object-cover"
-                                                src="https://lh3.googleusercontent.com/aida-public/AB6AXuB0kCKvs826jWHhgO4j282VI2muP6VUp1AEfEwNnyn4kJwC-pTposXVCo6SL1WFA5bTSowBPIWkXv5jcjlsUnuN46M0BZOwtiXF4iiAknIGbx9thIcx0I_yVa2W58NgVxHBvG9CEae_HK-kkW3ja8d2Bc9CZF51dXX39bsIAEDS6Zph-EBfpc67B9OVEry-Y0F0A0O2CaiPwOs8AuZkyxsa_xV6VY7IorHVmQdQ2JY53V44pXX_W6Zl6uRo3z9MgtpgC3GrGa2HZ3Q" />
-                                            <div class="flex flex-col">
-                                                <span class="font-semibold text-gray-800">Fluffy
-                                                    Pancakes</span>
-                                                <button @click="isModalOpen = true"
-                                                    class="text-xs text-indigo-600 hover:underline text-left">View
-                                                    Details</button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="px-6 py-4">Mike Johnson</td>
-                                    <td class="px-6 py-4">
-                                        <span
-                                            class="px-2 py-1 text-xs font-semibold text-red-800 bg-red-100 rounded-full">Rejected</span>
-                                    </td>
-                                    <td class="px-6 py-4">
-                                        <div class="flex items-center justify-center gap-2">
-                                            <label class="switch">
-                                                <input type="checkbox" />
-                                                <span class="slider"></span>
-                                            </label>
-                                            <button
-                                                class="text-red-500 hover:text-red-700 p-2 rounded-md hover:bg-red-50 transition-colors duration-200">
-                                                <span class="material-symbols-outlined">delete</span>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
+                                        </td>
+                                    </tr>
+
+                                    <% })%>
+
                             </tbody>
                         </table>
                     </div>
                 </div>
             </main>
-            <div id="users" class="content w-[85vw]">
+            <div id="users" class="content w-[85vw] hidden">
                 <section class="p-6 bg-gray-100">
                     <h2 class="text-2xl font-bold mb-4">Users Management</h2>
                     <div class="bg-white shadow rounded-lg p-4">
@@ -299,7 +248,7 @@
                                     <th class="hidden md:inline-block px-4 py-2">User ID</th>
                                     <th class="px-4 py-2">Name</th>
                                     <th class="px-4 py-2">Email</th>
-                                   
+
                                     <th class="hidden md:inline-block px-4 py-2">Status</th>
                                     <th class="px-4 py-2">Actions</th>
                                 </tr>
@@ -317,12 +266,14 @@
                                             <td class="px-4 py-2">
                                                 <%=usr.email%>
                                             </td>
-                                            
+
                                             <td class="hidden md:inline-block px-4 py-2 text-green-500 font-semibold">
-                                                Active</td>
+                                                Approved</td>
                                             <td class="px-4 py-2">
                                                 <a href="/admin/userDetails/<%= usr._id %>"
                                                     class="text-blue-500 hover:text-blue-700">View</a>
+                                                <a href="/admin/userDetails/<%= usr._id %>"
+                                                    class="text-blue-500 hover:text-blue-700">Ban</a>
 
 
 
@@ -394,5 +345,14 @@
     <script defer="" src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
 
 </body>
+<script>
+    function togggle(element, id) {
+        document.querySelectorAll('.content').forEach((ele) => {
+            ele.classList.add('hidden');
+        })
+        document.getElementById(id).classList.remove('hidden');
+
+    }
+</script>
 
 </html>
