All done except collections

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Work+Sans%3Awght%40400%3B500%3B700%3B900"
         onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <title>Culinary Canvas</title>
+    <title> Home</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
@@ -196,6 +196,10 @@
             </div>
         </main>
     </div>
+    <footer class="bg-gray-800 text-white text-center py-4">
+  <p class="text-sm">&copy; 2025 YourCompany. All rights reserved.</p>
+</footer>
+
 
 
 </body>
