--- a/views/search.ejs
+++ b/views/search.ejs
@@ -42,7 +42,7 @@
       }
     </style>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <title>Recipe Management and Sharing Platform</title>
+    <title>Recipe Management </title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
 </head>
 
